# vibeship-spark-intelligence

./: %USERPROFILE%.sparkmultiplier_grants.jsonl  .cursorrules  .gitignore  .mcp.json  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_ANALYSIS.md  CONTRIBUTING.md  CORE.md  CORE_GAPS.md  CORE_GAPS_PLAN.md  CORE_IMPLEMENTATION_PLAN.md  CORE_SELF_EVOLUTION_PROMPT.md  DASHBOARD_PLAYBOOK.md  EIDOS_GUIDE.md  EIDOS_QUICKSTART.md  EVOLUTION_CHIPS_RESEARCH.md  IMPLEMENTATION_PLAN.md  INTELLIGENT_LEARNING_ARCHITECTURE.md  Intelligence_Flow.md  Intelligence_Flow_Map.md  LICENSE  METARALPH_FLOW_MAP.md  META_RALPH.md  OPENCLAW_FULL_SYSTEM_BRIEF.md  OPTIMIZATION_CHECKER.md  OSS_ONLY_MANIFEST.md  PRODUCTION_READINESS.md  PROJECT.md  Path to AGI.md  README.md  SCHEDULER.md  SEMANTIC_ADVISOR_DESIGN.md  SEMANTIC_INTELLIGENCE_PROPOSAL.md  SKILL.md  SOUL.md  SPARK_ACTIVATION_PROMPT.md  (+27 more)
.optcheck/: config.yml
.spawner/: active-mission.json
adapters/: clawdbot_tailer.py  openclaw_tailer.py  stdin_ingest.py
benchmarks/: README.md  advisory_profile_sweeper.py  advisory_quality_ab.py  advisory_realism_bench.py  build_advisory_cases_from_logs.py  generate_synthetic.py  memory_retrieval_ab.py  memory_retrieval_domain_matrix.py  methodologies.py  run_benchmarks.py  seed_advisory_theories.py  synthetic_events.jsonl  tune_memory_retrieval_ab.py
chips/: bench-core.chip.yaml  biz-ops.chip.yaml  engagement-pulse.chip.yaml  game-dev.chip.yaml  market-intel.chip.yaml  marketing.chip.yaml  moltbook.chip.yaml  social-convo.chip.yaml  spark-core.chip.yaml  vibecoding.chip.yaml  x-social.chip.yaml
config/: learning_sources.yaml  opportunity_scanner.env.example  tuneables.json
docs/: ADVISORY_AND_LEARNING_BENCHMARKS.md  ADVISORY_BENCHMARK_SYSTEM.md  ADVISORY_OBSIDIAN_PLAYBOOK.md  ADVISORY_REALISM_PLAYBOOK.md  (+59 more)
(+717 files in other folders)
