[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeship-spark"
version = "0.1.0"
description = "Self-evolving intelligence layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vibeship", email = "hello@vibeship.co"}
]
keywords = [
    "ai",
    "agents",
    "learning",
    "cognitive",
    "self-improvement",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
mind = [
    "vibeship-mind>=0.1.0",
]

[project.urls]
Homepage = "https://vibeship.co"
Documentation = "https://docs.vibeship.co/spark"
Repository = "https://github.com/vibeforge1111/vibeship-spark-intelligence"

[project.scripts]
spark = "spark.cli:main"
spark-sync = "lib.context_sync:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lib*", "hooks*", "spark*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
